# hpc-homework

./: .gitignore
hw1/: q1.bcf  q1.run.xml  q1.tex  q2&3.aux  q2&3.bcf  q2&3.run.xml  q2&3.tex  ref.bib
hw1/laplace/: -Wno-framework-include-private-from-public  CMakeLists.txt  README.md  main  main.c  out0  out1.txt  out3  out3.txt
hw2/: CMakeLists.txt  MMult1.cpp  Makefile  README.md  gs2D-omp.cpp  jacobi2D-omp.cpp  main.cpp  omp_bug2.c  omp_bug2_solved.c  omp_bug3_solved.c  omp_bug4_solved.c  omp_bug5_solved.c  omp_bug6_solved.c  val_test01_solved.cpp  val_test02_solved.cpp
hw2/latex/: hw2.aux  hw2.tex
hw3/: CMakeLists.txt  README.md  fast-sin.cpp  fsin  makefile  omp-scan.cpp  scan
hw4/: CMakeLists.txt  Makefile  README.md  inner_product.cu  jacobi.cu  main  main.cpp  main.cu  temp.cu  vec_mat_mul.cu  vecadd.cpp
hw5/: CMakeLists.txt  README.md  jacobi  jacobi-mpi.cpp  ssort.cpp
hw5/slurm_scripts/: jacobi-strong-ln100-N1600-p256.sh  jacobi-strong-ln1600-N1600-p1.sh  jacobi-strong-ln1600-N6400-p16.sh  jacobi-strong-ln200-N1600-p64.sh  jacobi-strong-ln3200-N6400-p4.sh  jacobi-strong-ln400-N1600-p16.sh  jacobi-strong-ln400-N6400-p256.sh  jacobi-strong-ln6400-N6400-p1.sh  jacobi-strong-ln800-N1600-p4.sh  jacobi-strong-ln800-N6400-p64.sh  jacobi-weak-ln100-N100-p1.sh  jacobi-weak-ln100-N100-p4.sh  jacobi-weak-ln100-N1600-p256.sh  jacobi-weak-ln100-N200-p16.sh  jacobi-weak-ln100-N200-p4.sh  jacobi-weak-ln100-N400-p16.sh  jacobi-weak-ln100-N400-p64.sh  jacobi-weak-ln100-N50-p1.sh  jacobi-weak-ln100-N800-p256.sh  jacobi-weak-ln100-N800-p64.sh  runsort.sh  (+6 more)
